add lyrics: cupid

--- a/index.html
+++ b/index.html
@@ -31,6 +31,51 @@ TODO: load from files in directory
 </pre>
 -->
 
+
+<h2>cupid</h2>
+<pre>
+Cupid draw back your bow
+And let your arrow go
+Straight to my lover's heart for me, for me
+
+Cupid please hear my cry
+And let your arrow fly
+Straight to my lover's heart for me
+
+Now I don't mean to bother you but I'm in distress
+There's danger of me losing all of my happiness
+For I love a girl who doesn't know I exist
+And this you can fix, so
+
+Cupid draw back your bow
+And let your arrow go
+Straight to my lover's heart for me
+Nobody but me
+
+Cupid please hear my cry
+And let your arrow fly
+Straight to my lover's heart for me
+
+Now, Cupid if your arrow make a love storm for me
+I promise I will love her until eternity
+I know between the two of us her heart we can steal
+Help me if you will, so
+
+Cupid draw back your bow
+And let your arrow go
+Straight to my lover's heart for me
+Nobody but me
+
+Cupid please hear my cry
+And let your arrow fly
+Straight to my lover's heart for me
+
+Now, Cupid, don't you hear me
+Calling you? I need ya
+Cupid help me, I need ya
+</pre>
+
+
 <h2>what a wonderful world</h2>
 <pre>
 I see trees of green, red roses too
