Add we know the way, love is an open door

--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
     <head>
      <title>lullabies</title>
      <style type="text/css">
-         body {
-            color: #ccc;
-            background-color: #000;
-            font-family: arial, sans-serif;
-            max-width: 38rem;
-            padding: 2rem;
-            margin: auto;
-        }
+      body {
+          color: #ccc;
+          background-color: #000;
+          font-family: arial, sans-serif;
+          max-width: 38rem;
+          padding: 2rem;
+          margin: auto;
+      }
+      span {
+          display: block;
+      }
+
+      .duet-him {
+          color: #44c;
+      }
+      .duet-her {
+          color: #c44;
+      }
+      .duet-both {
+          color: #c4c;
+      }
         a {
             color: tomato;
         }
@@ -35,6 +48,125 @@ TODO: load from files in directory
      z
      foo
 -->
+
+        <h2>love is an open door</h2>
+        <div>
+            <span class="duet-her">Okay, can I just, say something crazy?</span>
+
+            <span class="duet-him">I love crazy!</span>
+
+            <span class="duet-her">All my life has been a series of doors in my face</span>
+            <span class="duet-her">And then suddenly I bump into you</span>
+
+            <span class="duet-him">I was thinking the same thing! 'Cause like</span>
+            <span class="duet-him">I've been searching my whole life to find my own place</span>
+            <span class="duet-him">And maybe it's the party talking or the chocolate fondue</span>
+            <span class="duet-her">[giggles]</span>
+
+            <span class="duet-her"> But with you...</span>
+            <span class="duet-him"> But with you</span>
+
+            <span class="duet-him"> I found my place...</span>
+            <span class="duet-her"> I see your face...</span>
+
+            <span class="duet-both">And it's nothing like I've ever known before!</span>
+            <span class="duet-both">Love is an open door!</span>
+            <span class="duet-both">Love is an open door!</span>
+            <span class="duet-both">Love is an open door!</span>
+
+            <span class="duet-her"> With you!</span>
+            <span class="duet-him"> With you!</span>
+            <span class="duet-her"> With you!</span>
+            <span class="duet-him"> With you!</span>
+
+            <span class="duet-both"> Love is an open door...</span>
+
+            <span class="duet-him"> I mean it's crazy...</span>
+            <span class="duet-her"> What?</span>
+
+            <span class="duet-him"> We finish each other's-</span>
+            <span class="duet-her"> Sandwiches!</span>
+
+            <span class="duet-him"> That's what I was gonna say!</span>
+
+            <span class="duet-her"> I've never met someone-</span>
+
+            <span class="duet-both">Who thinks so much like me!</span>
+            <span class="duet-both">Jinx! Jinx again!</span>
+            <span class="duet-both">Our mental synchronization</span>
+            <span class="duet-both">Can have but one explanation</span>
+
+            <span class="duet-him"> You-</span>
+            <span class="duet-her"> And I-</span>
+            <span class="duet-him"> Were-</span>
+            <span class="duet-her"> Just-</span>
+
+            <span class="duet-both"> Meant to be!</span>
+
+            <span class="duet-her"> Say goodbye...</span>
+            <span class="duet-him"> Say goodbye...</span>
+
+            <span class="duet-both">To the pain of the past</span>
+            <span class="duet-both">We don't have to feel it anymore!</span>
+
+            <span class="duet-both">Love is an open door!</span>
+            <span class="duet-both">Love is an open door!</span>
+            <span class="duet-both">Life can be so much more!</span>
+
+            <span class="duet-her"> With you!</span>
+            <span class="duet-him"> With you!</span>
+            <span class="duet-her"> With you!</span>
+            <span class="duet-him"> With you!</span>
+
+            <span class="duet-both"> Love is an open door...</span>
+
+            <span class="duet-him"> Can I say something crazy?</span>
+            <span class="duet-her"> [giggles]</span>
+            <span class="duet-him"> Will you marry me?</span>
+
+            <span class="duet-her"> Can I say something even crazier? Yes!</span>
+        </div>
+
+        <h2>we know the way</h2>
+        <pre>
+Tatou o tagata folau e vala’auina  (we are voyagers summoned by the mighty gods)
+E le atua o le sami tele e o mai (of this mighty ocean to come)
+Ia ava’e le lu’itau e lelei (we take up the good challenge)
+Tapenapena (get ready)
+
+Aue, aue
+Nuku i mua (there is land up ahead)
+Te manulele e tataki e (a bird in flight to take us there)
+Aue, aue (oh, oh)
+te fenua, te malie, (this beautiful land, the place i was looking for)
+Nae ko hakilia mo kaiga e. (we will make our home)
+
+We read the wind and the sky
+When the sun is high
+We sail the length of sea
+On the ocean breeze
+At night we name every star
+We know where we are
+We know who we are, who we are
+
+Aue, aue,
+We set a course to find
+A brand new island everywhere we row,
+Aue, aue,
+We keep our island in our mind
+And when it’s time to find home,
+We know the way.
+
+Aue, aue,
+we are explorers reading every sign
+we tell the stories of our elders
+in the never ending chain﻿
+Aue, aue
+te fenua, te malie,
+Nae ko hakilia
+We know the way
+        </pre>
+
 
 
 <h2>cupid</h2>
