--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ TODO: load from files in directory - .txt for most; .html for duet
 -->
 <div>
     <label for="searchbox-lyrics" class="is-size-5">lyric search</label>
-    <input class='input mb-5' type="search" id="searchbox-lyrics" placeholder="lyric search">
+    <input class='input mb-5' type="search" id="searchbox-lyrics" placeholder="lyric search"><br>
     <label for="searchbox-title" class="is-size-5">title search</label>
     <input class='input mb-5' type="search" id="searchbox-title" placeholder="title search">
 </div>
