Update duet colors

--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
         display: none;
       }
       .duet-him {
-          color: #44c;
+          color: #88f;
       }
       .duet-her {
-          color: #c44;
+          color: #f88;
       } 
       .duet-both {
-          color: #c4c;
       }
      </style>
 
