--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-     <title>lullabies</title>
+     <title>lyrics</title>
      <style type="text/css">
       body {
           color: #ccc;
@@ -103,9 +103,9 @@ TODO: load from files in directory - .txt for most; .html for duet
 -->
 <div>
     <label for="searchbox-lyrics" class="is-size-5">lyric search</label>
-    <input class='input mb-5' type="search" id="searchbox-lyrics" placeholder="lyric search"><br>
+    <input class='input mb-5' type="search" id="searchbox-lyrics" placeholder="lyric search" tabindex="0" autofocus><br>
     <label for="searchbox-title" class="is-size-5">title search</label>
-    <input class='input mb-5' type="search" id="searchbox-title" placeholder="title search">
+    <input class='input mb-5' type="search" id="searchbox-title" placeholder="title search" tabindex="1">
 </div>
 
 
