--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
     <head>
      <title>lyrics</title>
@@ -32,6 +34,7 @@
       } 
       .duet-both {
       }
+
      </style>
 
 
@@ -102,10 +105,169 @@ TODO: load from files in directory - .txt for most; .html for duet
 
 -->
 <div>
-    <label for="searchbox-lyrics" class="is-size-5">lyric search</label>
-    <input class='input mb-5' type="search" id="searchbox-lyrics" placeholder="lyric search" tabindex="0" autofocus><br>
-    <label for="searchbox-title" class="is-size-5">title search</label>
-    <input class='input mb-5' type="search" id="searchbox-title" placeholder="title search" tabindex="1">
+    <input class='input mb-5' type="search" id="searchbox-title" placeholder="title search" tabindex="0" autofocus>
+    <input class='input mb-5' type="search" id="searchbox-lyrics" placeholder="lyric search" tabindex="1">
+</div>
+
+<div class="item">
+    <h2>twinkle twinkle little star</h2>
+    <pre>
+Twinkle, twinkle, little star,
+How I wonder what you are.
+Up above the world so high,
+Like a diamond in the sky.
+
+When the blazing sun is gone,
+When he nothing shines upon,
+Then you show your little light,
+Twinkle, twinkle, all the night.
+
+Then the traveller in the dark,
+Thanks you for your tiny spark,
+He could not see which way to go,
+If you did not twinkle so.
+
+In the dark blue sky you keep,
+And often through my curtains peep,
+For you never shut your eye,
+‘Till the sun is in the sky.
+
+As your bright and tiny spark,
+Lights the traveller in the dark.
+Though I know not what you are,
+Twinkle, twinkle, little star.
+
+Twinkle, twinkle, little star.
+How I wonder what you are.
+Up above the world so high,
+Like a diamond in the sky.
+
+Twinkle, twinkle, little star.
+How I wonder what you are.
+How I wonder what you are.
+    </pre>
+</div>
+
+<div class="item"> 
+    <h2>somewhere over the rainbow</h2>
+    <pre>
+Somewhere over the rainbow
+Way up high
+There's a land that I heard of
+Once in a lullaby
+
+Somewhere over the rainbow
+Skies are blue
+And the dreams that you dare to dream
+Really do come true
+
+Someday I'll wish upon a star
+And wake up where the clouds are far behind me
+Where troubles melt like lemon drops
+Away above the chimney tops
+That's where you'll find me
+
+Somewhere over the rainbow
+Bluebirds fly
+Birds fly over the rainbow
+Why then, oh, why can't I?
+
+Somewhere over the rainbow
+Bluebirds fly
+Birds fly over the rainbow
+Why then, oh, why can't I?
+
+If happy little bluebirds fly
+Beyond the rainbow
+Why, oh why can't I?
+    </pre>
+</div>
+
+<div class="item">
+    <h2>you are my sunshine</h2>
+    <pre>
+You are my sunshine, my only sunshine
+You make me happy when skies are gray
+You'll never know, dear, how much I love you
+Please don't take my sunshine away
+
+The other night dear, as I lay sleeping
+I dreamed I held you in my arms
+When I awoke, dear, I was mistaken
+So I hung my head and I cried
+
+You are my sunshine, my only sunshine
+You make me happy when skies are gray
+You'll never know, dear, how much I love you
+Please don't take my sunshine away    
+    </pre>
+</div>
+
+
+<div class="item">
+    <h2>Hush Little Baby</h2>
+    <pre>
+Hush, little baby, don’t you cry,
+Papa’s going to sing you a lullaby.
+Hush little baby don’t say a word,
+Papa’s going to buy you a mockingbird.
+
+If that mockingbird won’t sing,
+Papa’s going to buy you a golden ring.
+If that gold ring turns to brass,
+Papa’s going to buy you a looking glass.
+
+If that glass begins to crack,
+Papa’s going to buy you a jumping jack.
+If that jumping jack is broke,
+Papa’s going to buy you a velvet cloak.
+
+If that velvet cloth is coarse,
+Papa’s going to buy you a rocking horse.
+If that rocking horse won’t rock,
+Papa’s going to buy you a cuckoo clock.
+
+If that cuckoo clock won’t tick,
+Papa’s going to buy you a walking stick.
+If that walking stick falls down,
+you’ll still be the sweetest little baby in town!
+    </pre>
+</div>
+
+
+<div class="item">
+    <h2>brahm's lullaby</h2>
+    <pre>
+Lullaby and good night
+With roses bedight
+With lilies o'er spread
+Is baby's wee bed
+
+Lullaby and good night
+Thy mother's delight
+Bright angels beside
+My darling abide
+
+Lay thee down now and rest
+May thy slumber be blessed
+Lay thee down now and rest
+May thy slumber be blessed
+
+Lullaby and good night
+With roses bedight
+With lilies o'er spread
+Is baby's wee bed
+
+Lay thee down now and rest
+May thy slumber be blessed
+Lay thee down now and rest
+May thy slumber be blessed
+
+Lullaby and good night
+You're thy mother's delight
+Bright angels beside
+My darling abide
+    </pre>
 </div>
 
 
@@ -410,135 +572,6 @@ Till the rivers all run dry
 Baby I'm yours
 Till the poets run out of rhyme
 Baby I'm yours
-</pre>
-</div>
-
-<div class="item">
-<h2>you are my sunshine</h2>
-<pre>
-You are my sunshine, my only sunshine
-You make me happy when skies are gray
-You'll never know, dear, how much I love you
-Please don't take my sunshine away
-
-The other night dear, as I lay sleeping
-I dreamed I held you in my arms
-When I awoke, dear, I was mistaken
-So I hung my head and I cried
-
-You are my sunshine, my only sunshine
-You make me happy when skies are gray
-You'll never know, dear, how much I love you
-Please don't take my sunshine away    
-</pre>
-</div>
-
-<div class="item"> 
-<h2>somewhere over the rainbow</h2>
-<pre>
-Somewhere over the rainbow
-Way up high
-There's a land that I heard of
-Once in a lullaby
-
-Somewhere over the rainbow
-Skies are blue
-And the dreams that you dare to dream
-Really do come true
-
-Someday I'll wish upon a star
-And wake up where the clouds are far behind me
-Where troubles melt like lemon drops
-Away above the chimney tops
-That's where you'll find me
-
-Somewhere over the rainbow
-Bluebirds fly
-Birds fly over the rainbow
-Why then, oh, why can't I?
-
-Somewhere over the rainbow
-Bluebirds fly
-Birds fly over the rainbow
-Why then, oh, why can't I?
-
-If happy little bluebirds fly
-Beyond the rainbow
-Why, oh why can't I?
-</pre>
-</div>
-
-<div class="item">
-<h2>twinkle twinkle little star</h2>
-<pre>
-Twinkle, twinkle, little star,
-How I wonder what you are.
-Up above the world so high,
-Like a diamond in the sky.
-
-When the blazing sun is gone,
-When he nothing shines upon,
-Then you show your little light,
-Twinkle, twinkle, all the night.
-
-Then the traveller in the dark,
-Thanks you for your tiny spark,
-He could not see which way to go,
-If you did not twinkle so.
-
-In the dark blue sky you keep,
-And often through my curtains peep,
-For you never shut your eye,
-‘Till the sun is in the sky.
-
-As your bright and tiny spark,
-Lights the traveller in the dark.
-Though I know not what you are,
-Twinkle, twinkle, little star.
-
-Twinkle, twinkle, little star.
-How I wonder what you are.
-Up above the world so high,
-Like a diamond in the sky.
-
-Twinkle, twinkle, little star.
-How I wonder what you are.
-How I wonder what you are.
-</pre>
-</div>
-
-<div class="item">
-<h2>brahm's lullaby</h2>
-<pre>
-Lullaby and good night
-With roses bedight
-With lilies o'er spread
-Is baby's wee bed
-
-Lullaby and good night
-Thy mother's delight
-Bright angels beside
-My darling abide
-
-Lay thee down now and rest
-May thy slumber be blessed
-Lay thee down now and rest
-May thy slumber be blessed
-
-Lullaby and good night
-With roses bedight
-With lilies o'er spread
-Is baby's wee bed
-
-Lay thee down now and rest
-May thy slumber be blessed
-Lay thee down now and rest
-May thy slumber be blessed
-
-Lullaby and good night
-You're thy mother's delight
-Bright angels beside
-My darling abide
 </pre>
 </div>
 
