Fix mobile style

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
      <title>lyrics</title>
      <style type="text/css">
       body {
-          color: #ccc;
           background-color: #000;
-          font-family: arial, sans-serif;
-          max-width: 38rem;
-          padding: 2rem;
-          margin: auto;
+          color: #ccc;
+          font-size: 4vw;
+          font-family: arial;
+          line-height: 150%;
       }
 
       p {
@@ -31,7 +30,7 @@
       }
       .duet-her {
           color: #f88;
-      } 
+      }
       .duet-both {
       }
 
